--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.19.2"
+    "@prisma/client": "^5.15.0",
+    "bcrypt": "^5.1.1",
+    "express": "^4.19.2",
+    "mongodb": "^6.7.0",
+    "prisma": "^5.15.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
