--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@prisma/client": "^5.15.0",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
     "prisma": "^5.15.0"
   },
