--- a/api/package.json
+++ b/api/package.json
@@ -18,10 +18,10 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.7.0",
-    "prisma": "^5.15.0"
+    "mongodb": "^6.8.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "prisma": "^5.16.1"
   }
 }
